Fix overflow scroll issue on iOS

--- a/css/blocks/mega-menu.css
+++ b/css/blocks/mega-menu.css
@@ -1,5 +1,8 @@
-body.overflow-hidden {
+html.overflow-hidden,
+html.overflow-hidden body {
   overflow: hidden;
+  position: relative;
+  height: 100%;
 }
 
 .mega-menu {
